--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,56 @@
-version: '3.7'
-
-networks:
-  shopfleet_network:
-
 services:
-  app:
-    image: laravel:10.x
-    container_name: shopfleet_app
-    environment:
-      APP_ENV: local
-      APP_DEBUG: true
-      APP_URL: http://localhost:8000
-    volumes:
-      - ./app:/var/www/html
-      - ./env:/var/www/html/.env
-    networks:
-      - shopfleet_network
-
-  db:
-    image: postgres:16
-    container_name: shopfleet_db
-    environment:
-      POSTGRES_PASSWORD: ${env:POSTGRES_PASSWORD}
-      POSTGRES_USER: ${env:POSTGRES_USER}
-      POSTGRES_DB: ${env:POSTGRES_DB}
-      networks:
-      - shopfleet_network
-    ports:
-      - "5432:5432"
+    laravel.test:
+        build:
+            context: ./vendor/laravel/sail/runtimes/8.2
+            dockerfile: Dockerfile
+            args:
+                WWWGROUP: '${WWWGROUP}'
+        image: sail-8.2/app
+        extra_hosts:
+            - 'host.docker.internal:host-gateway'
+        ports:
+            - '${APP_PORT:-80}:80'
+            - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
+        environment:
+            WWWUSER: '${WWWUSER}'
+            LARAVEL_SAIL: 1
+            XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
+            XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
+            IGNITION_LOCAL_SITES_PATH: '${PWD}'
+        volumes:
+            - '.:/var/www/html'
+        networks:
+            - sail
+        depends_on:
+            - pgsql
+    pgsql:
+        image: 'postgres:15'
+        ports:
+            - '${FORWARD_DB_PORT:-5432}:5432'
+        environment:
+            PGPASSWORD: '${DB_PASSWORD:-secret}'
+            POSTGRES_DB: '${DB_DATABASE}'
+            POSTGRES_USER: '${DB_USERNAME}'
+            POSTGRES_PASSWORD: '${DB_PASSWORD:-secret}'
+        volumes:
+            - 'sail-pgsql:/var/lib/postgresql/data'
+            - './vendor/laravel/sail/database/pgsql/create-testing-database.sql:/docker-entrypoint-initdb.d/10-create-testing-database.sql'
+        networks:
+            - sail
+        healthcheck:
+            test:
+                - CMD
+                - pg_isready
+                - '-q'
+                - '-d'
+                - '${DB_DATABASE}'
+                - '-U'
+                - '${DB_USERNAME}'
+            retries: 3
+            timeout: 5s
+networks:
+    sail:
+        driver: bridge
+volumes:
+    sail-pgsql:
+        driver: local
